Bug 35671 - help: not linking to pages correctly ...
Summary: help: not linking to pages correctly ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
3.3.2 release
Hardware: Other All
: high blocker
Assignee: Jan Holesovsky
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: mab3.4
  Show dependency treegraph
 
Reported: 2011-03-25 09:36 UTC by Michael Meeks
Modified: 2011-05-17 06:06 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Meeks 2011-03-25 09:36:53 UTC
If I use a 3.3.2 install with no help, and open Calc->Format->Cells, and click help, I end up here:

http://help.libreoffice.org/scalc/701386249?Language=en-US&System=UNIX#bm_id3153312

if I click Help->Help in the menu I end up here:

http://help.libreoffice.org/scalc/start?Language=en-US&System=UNIX

* but *

if I use LibreOffice 3.4 (from master) and I repeat this I get:

http://help.libreoffice.org/scalc/start?Language=en-US&System=UNIX

for clicking in the Calc->Format->Cells dialog, and:

http://help.libreoffice.org/scalc/.uno%3AHelpIndex?Language=en-US&System=UNIX#bm_id3149178

For clicking Help->Help

it looks like something got transposed in the creation of these URLs during the merge (and indeed the merge of that module was somewhat unpleasant ;-)
Comment 1 Michael Meeks 2011-03-25 09:37:37 UTC
All yours kendy ? :-)
Comment 2 Rainer Bielefeld Retired 2011-05-04 06:37:22 UTC
Modified Version due to report
Comment 3 Michael Meeks 2011-05-06 04:43:15 UTC
upgrading severity - we need on-line help on release :-)
Comment 4 Jan Holesovsky 2011-05-17 06:06:40 UTC
Fixed in master, please cherry pick to libreoffice-3-4.

commit e605aecf7fb4f7b67787940ef0627972e9660cbc
Author: Jan Holesovsky <kendy@suse.cz>
Date:   Tue May 17 15:03:38 2011 +0200

    wikihelp: Fix linking to pages, fdo#35671.

The only thing that is missing now is the upload of the 3.4 wikihelp.