wikihelp: Fix linking to pages, fdo#35671.